Bug 429060 - "Launch" button is pointless with plugins
Summary: "Launch" button is pointless with plugins
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2020-11-13 12:48 UTC by Patrick Silva
Modified: 2022-01-20 19:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-11-13 12:48:30 UTC
STEPS TO REPRODUCE
1. open Discover and install KIPI plugins for Gwenview
2. 
3. 

OBSERVED RESULT
after installation to be completed, "Launch" button appears in the upper right corner. Nothing happens when we click on it.

EXPECTED RESULT
description pages of installed plugins should not have a "Launch" button.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.1
Comment 1 Aleix Pol 2022-01-17 18:58:14 UTC
Git commit 91109bdfd6d1a68e5862c2f0c5b442bebe42b984 by Aleix Pol.
Committed on 17/01/2022 at 18:57.
Pushed by apol into branch 'master'.

pk: Only offer to launch apps

M  +6    -2    libdiscover/backends/PackageKitBackend/AppPackageKitResource.cpp

https://invent.kde.org/plasma/discover/commit/91109bdfd6d1a68e5862c2f0c5b442bebe42b984
Comment 2 Aleix Pol 2022-01-17 18:58:49 UTC
Git commit 8271109a2575f4a842130d78f5cab6f449977ec3 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 17/01/2022 at 18:58.
Pushed by apol into branch 'Plasma/5.24'.

pk: Only offer to launch apps


(cherry picked from commit 91109bdfd6d1a68e5862c2f0c5b442bebe42b984)

M  +6    -2    libdiscover/backends/PackageKitBackend/AppPackageKitResource.cpp

https://invent.kde.org/plasma/discover/commit/8271109a2575f4a842130d78f5cab6f449977ec3