pk: Only offer to launch apps

BUG: 429060


(cherry picked from commit 91109bdfd6d1a68e5862c2f0c5b442bebe42b984)